gen/LatexParser.java
// Generated from /home/krzysztof/Dokumenty/Kompilatory/LatexToHtml/src/main/antlr/LatexParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LatexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, LINE_BREAK=3, DOCUMENTCLASS=4, PACKAGES=5, BEGIN=6, 
		END=7, TITLE=8, AUTHOR=9, DATE=10, FRAC=11, INT=12, MAKETITLE=13, SECTION=14, 
		LABEL=15, CLASS=16, PACKAGE=17, DOCUMENT=18, EQUATION=19, ALIGN=20, MATRIX=21, 
		MULTLINE=22, DISPLAYMATH=23, PLUS=24, MINUS=25, EQ=26, FACT=27, SLASH=28, 
		MUL=29, POWER=30, L=31, G=32, OPEN_PAREN=33, CLOSE_PAREN=34, OPEN_BRACE=35, 
		CLOSE_BRACE=36, OPEN_BRACKET=37, CLOSE_BRACKET=38, ANDSGN=39, NEWLINE=40, 
		SQRT=41, ULINE=42, DECIMAL_INTEGER=43, DECIMAL_FLOAT=44, LETTER=45, STRING=46, 
		LEQ=47, SUBSET=48, SUBSETEQ=49, GEQ=50, SUPSET=51, SUPSETEQ=52, TIMES=53, 
		DIV=54, AST=55, STAR=56, EXISTS=57, NEXISTS=58, FORALL=59, NEG=60, IN=61, 
		NIN=62, AND=63, OR=64, RIGHTARROW=65, LEFTARROW=66, ALPHA=67, BETA=68, 
		GAMMA=69, DELTA=70, EPSILON=71, OMEGA=72, PI=73, SIN=74, COS=75, TAN=76, 
		COT=77, ARCSIN=78, ARCCOS=79, ARCTAN=80, ARCCOT=81, COMMENT=82, EOL=83, 
		WS=84, DOLLAR=85, BACKSLASH=86, ANY_CHAR=87;
	public static final int
		RULE_prule = 0, RULE_data = 1, RULE_packages = 2, RULE_document = 3, RULE_body = 4, 
		RULE_section = 5, RULE_title = 6, RULE_author = 7, RULE_date = 8, RULE_equation = 9, 
		RULE_matrix = 10, RULE_align = 11, RULE_multline = 12, RULE_inline = 13, 
		RULE_centered = 14, RULE_displaymath = 15, RULE_math_formula = 16, RULE_matrix_formula = 17, 
		RULE_fraction = 18, RULE_integral = 19, RULE_sqrt = 20, RULE_simple_symbols = 21, 
		RULE_relation_symbols = 22, RULE_binary_operations = 23, RULE_logic_notation = 24, 
		RULE_greek_letters = 25, RULE_trigonometric = 26, RULE_symbol = 27, RULE_keyword = 28, 
		RULE_label = 29, RULE_text = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"prule", "data", "packages", "document", "body", "section", "title", 
			"author", "date", "equation", "matrix", "align", "multline", "inline", 
			"centered", "displaymath", "math_formula", "matrix_formula", "fraction", 
			"integral", "sqrt", "simple_symbols", "relation_symbols", "binary_operations", 
			"logic_notation", "greek_letters", "trigonometric", "symbol", "keyword", 
			"label", "text"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'\\documentclass'", "'\\usepackage'", "'\\begin'", 
			"'\\end'", "'\\title'", "'\\author'", "'\\date'", "'\\frac'", "'\\int'", 
			"'\\maketitle'", "'\\section'", "'\\label'", "'article'", null, "'document'", 
			null, null, "'matrix'", null, null, "'+'", "'-'", null, "'!'", "'/'", 
			"'*'", "'^'", "'<'", "'>'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"'&'", "'\\\\'", "'\\sqrt'", "'_'", null, null, null, null, "'\\leq'", 
			"'\\subset'", "'\\subseteq'", "'\\geq'", "'\\supset'", "'\\supseteq'", 
			"'\times'", "'\\div'", "'\\ast'", "'\\star'", "'\\exists'", "'\\nexists'", 
			"'\\forall'", "'\\neg'", "'\\in'", "'\\notin'", "'\\land'", "'\\lor'", 
			"'\\rightarrow'", "'\\leftarrow'", "'\\alpha'", "'\\beta'", "'\\gamma'", 
			"'\\delta'", "'\\epsilon'", "'\\omega'", "'\\pi'", "'\\sin'", "'\\cos'", 
			"'\\tan'", "'\\cot'", "'\\arcsin'", "'\\arccos'", "'\\arctan'", "'\\arccot'", 
			null, "'\n'", "' '", "'$'", "'\\'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "LINE_BREAK", "DOCUMENTCLASS", "PACKAGES", 
			"BEGIN", "END", "TITLE", "AUTHOR", "DATE", "FRAC", "INT", "MAKETITLE", 
			"SECTION", "LABEL", "CLASS", "PACKAGE", "DOCUMENT", "EQUATION", "ALIGN", 
			"MATRIX", "MULTLINE", "DISPLAYMATH", "PLUS", "MINUS", "EQ", "FACT", "SLASH", 
			"MUL", "POWER", "L", "G", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", 
			"CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", "ANDSGN", "NEWLINE", 
			"SQRT", "ULINE", "DECIMAL_INTEGER", "DECIMAL_FLOAT", "LETTER", "STRING", 
			"LEQ", "SUBSET", "SUBSETEQ", "GEQ", "SUPSET", "SUPSETEQ", "TIMES", "DIV", 
			"AST", "STAR", "EXISTS", "NEXISTS", "FORALL", "NEG", "IN", "NIN", "AND", 
			"OR", "RIGHTARROW", "LEFTARROW", "ALPHA", "BETA", "GAMMA", "DELTA", "EPSILON", 
			"OMEGA", "PI", "SIN", "COS", "TAN", "COT", "ARCSIN", "ARCCOS", "ARCTAN", 
			"ARCCOT", "COMMENT", "EOL", "WS", "DOLLAR", "BACKSLASH", "ANY_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LatexParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LatexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PruleContext extends ParserRuleContext {
		public TerminalNode DOCUMENTCLASS() { return getToken(LatexParser.DOCUMENTCLASS, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(LatexParser.OPEN_BRACE, 0); }
		public TerminalNode CLASS() { return getToken(LatexParser.CLASS, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(LatexParser.CLOSE_BRACE, 0); }
		public PackagesContext packages() {
			return getRuleContext(PackagesContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public DocumentContext document() {
			return getRuleContext(DocumentContext.class,0);
		}
		public PruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).enterPrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).exitPrule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatexParserVisitor ) return ((LatexParserVisitor<? extends T>)visitor).visitPrule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PruleContext prule() throws RecognitionException {
		PruleContext _localctx = new PruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(DOCUMENTCLASS);
			setState(63);
			match(OPEN_BRACE);
			setState(64);
			match(CLASS);
			setState(65);
			match(CLOSE_BRACE);
			setState(66);
			packages();
			setState(67);
			data();
			setState(68);
			document();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public AuthorContext author() {
			return getRuleContext(AuthorContext.class,0);
		}
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).exitData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatexParserVisitor ) return ((LatexParserVisitor<? extends T>)visitor).visitData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_data);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TITLE) {
				{
				setState(70);
				title();
				}
			}

			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AUTHOR) {
				{
				setState(73);
				author();
				}
			}

			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DATE) {
				{
				setState(76);
				date();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackagesContext extends ParserRuleContext {
		public List<TerminalNode> PACKAGES() { return getTokens(LatexParser.PACKAGES); }
		public TerminalNode PACKAGES(int i) {
			return getToken(LatexParser.PACKAGES, i);
		}
		public List<TerminalNode> OPEN_BRACKET() { return getTokens(LatexParser.OPEN_BRACKET); }
		public TerminalNode OPEN_BRACKET(int i) {
			return getToken(LatexParser.OPEN_BRACKET, i);
		}
		public List<TerminalNode> CLOSE_BRACKET() { return getTokens(LatexParser.CLOSE_BRACKET); }
		public TerminalNode CLOSE_BRACKET(int i) {
			return getToken(LatexParser.CLOSE_BRACKET, i);
		}
		public List<TerminalNode> OPEN_BRACE() { return getTokens(LatexParser.OPEN_BRACE); }
		public TerminalNode OPEN_BRACE(int i) {
			return getToken(LatexParser.OPEN_BRACE, i);
		}
		public List<TerminalNode> PACKAGE() { return getTokens(LatexParser.PACKAGE); }
		public TerminalNode PACKAGE(int i) {
			return getToken(LatexParser.PACKAGE, i);
		}
		public List<TerminalNode> CLOSE_BRACE() { return getTokens(LatexParser.CLOSE_BRACE); }
		public TerminalNode CLOSE_BRACE(int i) {
			return getToken(LatexParser.CLOSE_BRACE, i);
		}
		public List<TerminalNode> STRING() { return getTokens(LatexParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(LatexParser.STRING, i);
		}
		public List<TerminalNode> DECIMAL_INTEGER() { return getTokens(LatexParser.DECIMAL_INTEGER); }
		public TerminalNode DECIMAL_INTEGER(int i) {
			return getToken(LatexParser.DECIMAL_INTEGER, i);
		}
		public PackagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packages; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).enterPackages(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).exitPackages(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatexParserVisitor ) return ((LatexParserVisitor<? extends T>)visitor).visitPackages(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackagesContext packages() throws RecognitionException {
		PackagesContext _localctx = new PackagesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packages);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(94);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					{
					setState(79);
					match(PACKAGES);
					setState(80);
					match(OPEN_BRACE);
					setState(81);
					match(PACKAGE);
					setState(82);
					match(CLOSE_BRACE);
					}
					}
					break;
				case 2:
					{
					setState(83);
					match(PACKAGES);
					setState(84);
					match(OPEN_BRACKET);
					setState(86); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(85);
						_la = _input.LA(1);
						if ( !(_la==DECIMAL_INTEGER || _la==STRING) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						}
						setState(88); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==DECIMAL_INTEGER || _la==STRING );
					setState(90);
					match(CLOSE_BRACKET);
					setState(91);
					match(OPEN_BRACE);
					setState(92);
					match(PACKAGE);
					setState(93);
					match(CLOSE_BRACE);
					}
					break;
				}
				}
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PACKAGES );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(LatexParser.BEGIN, 0); }
		public List<TerminalNode> OPEN_BRACE() { return getTokens(LatexParser.OPEN_BRACE); }
		public TerminalNode OPEN_BRACE(int i) {
			return getToken(LatexParser.OPEN_BRACE, i);
		}
		public List<TerminalNode> DOCUMENT() { return getTokens(LatexParser.DOCUMENT); }
		public TerminalNode DOCUMENT(int i) {
			return getToken(LatexParser.DOCUMENT, i);
		}
		public List<TerminalNode> CLOSE_BRACE() { return getTokens(LatexParser.CLOSE_BRACE); }
		public TerminalNode CLOSE_BRACE(int i) {
			return getToken(LatexParser.CLOSE_BRACE, i);
		}
		public TerminalNode END() { return getToken(LatexParser.END, 0); }
		public TerminalNode MAKETITLE() { return getToken(LatexParser.MAKETITLE, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatexParserVisitor ) return ((LatexParserVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(BEGIN);
			setState(99);
			match(OPEN_BRACE);
			setState(100);
			match(DOCUMENT);
			setState(101);
			match(CLOSE_BRACE);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MAKETITLE) {
				{
				setState(102);
				match(MAKETITLE);
				}
			}

			setState(107); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(107);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BEGIN:
				case FRAC:
				case INT:
				case CLASS:
				case PACKAGE:
				case DOCUMENT:
				case EQUATION:
				case ALIGN:
				case MATRIX:
				case MULTLINE:
				case DISPLAYMATH:
				case PLUS:
				case MINUS:
				case EQ:
				case FACT:
				case SLASH:
				case MUL:
				case POWER:
				case L:
				case G:
				case OPEN_PAREN:
				case CLOSE_PAREN:
				case OPEN_BRACKET:
				case CLOSE_BRACKET:
				case ANDSGN:
				case SQRT:
				case ULINE:
				case DECIMAL_INTEGER:
				case LETTER:
				case STRING:
				case LEQ:
				case SUBSET:
				case SUBSETEQ:
				case GEQ:
				case SUPSET:
				case SUPSETEQ:
				case TIMES:
				case DIV:
				case AST:
				case STAR:
				case EXISTS:
				case NEXISTS:
				case FORALL:
				case NEG:
				case IN:
				case NIN:
				case AND:
				case OR:
				case RIGHTARROW:
				case LEFTARROW:
				case ALPHA:
				case BETA:
				case GAMMA:
				case DELTA:
				case EPSILON:
				case OMEGA:
				case PI:
				case SIN:
				case COS:
				case TAN:
				case COT:
				case ARCSIN:
				case ARCCOS:
				case ARCTAN:
				case ARCCOT:
				case DOLLAR:
				case BACKSLASH:
				case ANY_CHAR:
					{
					setState(105);
					body();
					}
					break;
				case SECTION:
					{
					setState(106);
					section();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BEGIN) | (1L << FRAC) | (1L << INT) | (1L << SECTION) | (1L << CLASS) | (1L << PACKAGE) | (1L << DOCUMENT) | (1L << EQUATION) | (1L << ALIGN) | (1L << MATRIX) | (1L << MULTLINE) | (1L << DISPLAYMATH) | (1L << PLUS) | (1L << MINUS) | (1L << EQ) | (1L << FACT) | (1L << SLASH) | (1L << MUL) | (1L << POWER) | (1L << L) | (1L << G) | (1L << OPEN_PAREN) | (1L << CLOSE_PAREN) | (1L << OPEN_BRACKET) | (1L << CLOSE_BRACKET) | (1L << ANDSGN) | (1L << SQRT) | (1L << ULINE) | (1L << DECIMAL_INTEGER) | (1L << LETTER) | (1L << STRING) | (1L << LEQ) | (1L << SUBSET) | (1L << SUBSETEQ) | (1L << GEQ) | (1L << SUPSET) | (1L << SUPSETEQ) | (1L << TIMES) | (1L << DIV) | (1L << AST) | (1L << STAR) | (1L << EXISTS) | (1L << NEXISTS) | (1L << FORALL) | (1L << NEG) | (1L << IN) | (1L << NIN) | (1L << AND))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (OR - 64)) | (1L << (RIGHTARROW - 64)) | (1L << (LEFTARROW - 64)) | (1L << (ALPHA - 64)) | (1L << (BETA - 64)) | (1L << (GAMMA - 64)) | (1L << (DELTA - 64)) | (1L << (EPSILON - 64)) | (1L << (OMEGA - 64)) | (1L << (PI - 64)) | (1L << (SIN - 64)) | (1L << (COS - 64)) | (1L << (TAN - 64)) | (1L << (COT - 64)) | (1L << (ARCSIN - 64)) | (1L << (ARCCOS - 64)) | (1L << (ARCTAN - 64)) | (1L << (ARCCOT - 64)) | (1L << (DOLLAR - 64)) | (1L << (BACKSLASH - 64)) | (1L << (ANY_CHAR - 64)))) != 0) );
			setState(111);
			match(END);
			setState(112);
			match(OPEN_BRACE);
			setState(113);
			match(DOCUMENT);
			setState(114);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public List<MatrixContext> matrix() {
			return getRuleContexts(MatrixContext.class);
		}
		public MatrixContext matrix(int i) {
			return getRuleContext(MatrixContext.class,i);
		}
		public List<AlignContext> align() {
			return getRuleContexts(AlignContext.class);
		}
		public AlignContext align(int i) {
			return getRuleContext(AlignContext.class,i);
		}
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public List<MultlineContext> multline() {
			return getRuleContexts(MultlineContext.class);
		}
		public MultlineContext multline(int i) {
			return getRuleContext(MultlineContext.class,i);
		}
		public List<InlineContext> inline() {
			return getRuleContexts(InlineContext.class);
		}
		public InlineContext inline(int i) {
			return getRuleContext(InlineContext.class,i);
		}
		public List<CenteredContext> centered() {
			return getRuleContexts(CenteredContext.class);
		}
		public CenteredContext centered(int i) {
			return getRuleContext(CenteredContext.class,i);
		}
		public List<DisplaymathContext> displaymath() {
			return getRuleContexts(DisplaymathContext.class);
		}
		public DisplaymathContext displaymath(int i) {
			return getRuleContext(DisplaymathContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LatexParserListener ) ((LatexParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LatexParserVisitor ) return ((LatexParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(124); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(124);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(116);
						equation();
						}
						break;
					case 2:
						{
						setState(117);
						matrix();
						}
						break;
					case 3:
						{
						setState(118);
						align();
						}
						break;
					case 4:
						{
						setState(119);
						text();
						}
						break;
					case 5:
						{
						setState(120);
						multline();
						}
						break;
					case 6:
						{
						setState(121);
						inline();
						}
						break;
					case 7:
						{
						setState(122);
						centered();
						}
						break;
					case 8:
						{
						setState(123);
						displaymath();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(126); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
